--- a/single_number/java/.project
+++ b/single_number/java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>majority_element</name>
+	<name>single_number</name>
 	<comment></comment>
 	<projects>
 	</projects>
